...
      Button(action: { coordinator.pop() }) {
        Image(systemName: "xmark.circle.fill")
          .foregroundColor(.secondary)
          .imageScale(.large)
      }
      .padding(12)
      .accessibilityLabel("Close")
    }
    .navigationBarBackButtonHidden(true)
  }
}


...
